# ib-topo

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/ibtopo/: __init__.py  topo.py
tests/: conftest.py  test_ibtopo.py
tests/data/: guids.txt  hosts.txt  ref_torset-00_hosts.txt  ref_torset-01_hosts.txt  ref_torset-02_hosts.txt  ref_torset-03_hosts.txt  ref_torset-04_hosts.txt  ref_torset-05_hosts.txt  ref_torset-06_hosts.txt  ref_torset-07_hosts.txt  ref_torset-08_hosts.txt  ref_torset-09_hosts.txt  ref_torset-10_hosts.txt  ref_torset-11_hosts.txt  topology.txt
